--- a/index.html
+++ b/index.html
@@ -7,7 +7,14 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Hello this is new Branch mehdivergen</h1>
+    <div class="container">
+        <div>
+            <h3>HOme</h3>
+        </div>
+        <div>
+            <h3>GUEST</h3>
+        </div>
+    </div>
     <script src="app.js"></script>
 </body>
 </html>
